--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles/index-style.css">
+    <title> Eca | Portfolio </title>
 </head>
 <body>
-    
+    <div class="my-container">
+        <div class="my-pic">
+            <img src="images/my_picture.PNG" alt="Hi, I am Erica Gaffud">
+        </div>
+        <div class="my-front">
+            <h1> E <span>rica</span>  G <span> affud </span>  </h1>
+            <h2> Junior Software Developer </h2>
+            <div class="font-awe">
+                <a href="#"> <i class="fa-solid fa-house-user"></i> </a>
+                <a href="#"> <i class="fa-solid fa-address-card"></i> </a>
+                <a href="#"> <i class="fa-solid fa-code"></i> </a>
+                <a href="#"> <i class="fa-solid fa-code-branch"></i> </a>
+                <a href="#"> <i class="fa-solid fa-address-book"></i> </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
