--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/index-style.css">
+    <link rel="icon" href="images/Logo.PNG">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+    <script src="js/animation.js"></script>
     <title> Eca | Portfolio </title>
 </head>
 <body>
     <div class="my-container">
         <div class="my-pic">
-            <img src="images/my_picture.PNG" alt="Hi, I am Erica Gaffud">
+            <div class="stack first-bg first-bg-mobile"></div>
+            <div class="stack second-bg">
+                <img id="myPic" src="images/my_picture.PNG" alt="Hi, I am Erica Gaffud">
+            </div>
+            <div class="stack third-bg third-bg-mobile"></div>
+            <div>
+                <div class="bottom-long-strip"></div>
+                <div class="bottom-short-strip"></div>
+                <div class="bottom-big-circle"></div>
+                <div class="bottom-small-circle"></div>
+            </div>
+            <div>
+                <div class="left-strip"></div>
+                <div class="right-strip"></div>
+                <div class="left-big-circle"></div>
+                <div class="left-small-circle"></div>
+                <div class="right-big-circle"></div>
+                <div class="right-small-circle"></div>
+            </div>
         </div>
         <div class="my-front">
             <h1> E <span>rica</span>  G <span> affud </span>  </h1>
@@ -24,6 +48,12 @@
                 <a href="#"> <i class="fa-solid fa-code"></i> </a>
                 <a href="#"> <i class="fa-solid fa-code-branch"></i> </a>
                 <a href="#"> <i class="fa-solid fa-address-book"></i> </a>
+            </div>
+            <div>
+                <div class="top-short-strip"></div>
+                <div class="top-long-strip"></div>
+                <div class="top-big-circle"></div>
+                <div class="top-small-circle"></div>
             </div>
         </div>
     </div>
