--- a/index.html
+++ b/index.html
@@ -7,17 +7,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/index-style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-    <title> Portfolio | Erica Gaffud </title>
+    <link rel="icon" href="/assets/logo.png">
+    <title> Document </title>
     <link rel="stylesheet" href="/styles/global/global.css">
+    <link rel="stylesheet" href="/styles/home/home.css">
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <h1 class="header--name"> Erica Gaffud </h1>
+            <div class="header--button">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </div>
+        <img src="/assets/home/project_1.png">
+        <img src="/assets/home/project_2.png">
+        <img src="/assets/home/project_3.png">
+        <img src="/assets/home/project_4.png">
+        <img src="/assets/home/project_5.png">
+        <img src="/assets/home/project_6.png">
+    </div>
 
-    
-    <script src="js/animation.js"></script>
+    <div class="header-menu"></div>
+
+    <script src="/script/global.js"></script>
+    <script src="/script/animation.js"></script>
 </body>
 </html>
