--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1 class="header--name"> Erica Gaffud </h1>
-            <div class="header--button">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </div>
+        <div class="header"></div>
+        <div class="header-menu"></div>
+
         <img src="/assets/home/project_1.png">
         <img src="/assets/home/project_2.png">
         <img src="/assets/home/project_3.png">
@@ -32,7 +29,6 @@
         <img src="/assets/home/project_6.png">
     </div>
 
-    <div class="header-menu"></div>
 
     <script src="/script/global.js"></script>
     <script src="/script/animation.js"></script>
