--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
         <div class="header"></div>
         <div class="header-menu"></div>
 
-        <img src="/assets/home/project_1.png">
-        <img src="/assets/home/project_2.png">
+        <img src="/assets/home/project_1.png" data-page="logo">
+        <img src="/assets/home/project_2.png" data-page="ams">
         <img src="/assets/home/project_3.png">
         <img src="/assets/home/project_4.png">
         <img src="/assets/home/project_5.png">
         <img src="/assets/home/project_6.png">
     </div>
 
-
     <script src="/script/global.js"></script>
     <script src="/script/animation.js"></script>
+    <script>
+        $('.container img').on('click', function(){
+            var page = $(this).data('page');
+            window.location.href = 'pages/' + page + '.html';
+        })
+    </script>
 </body>
 </html>
