page header implementation

--- a/pages/ams.html
+++ b/pages/ams.html
@@ -16,13 +16,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="header-menu"></div>
+        <div class="page-header" data-title="Accident Monitoring System"></div>
 
         <div class="ams-container">
-            <h2> Accident Monitoring System </h2><br>
-            <h6> A system designed to detect, monitor, and respond to accidents in real-time. 
-                AMS is to enhance safety by minimizing response times, improving situational awareness, and increasing the chance of saving people's lives.
+            <!-- <h2> Accident Monitoring System </h2><br> -->
+            <h6> AMS is a system designed to detect, monitor, and respond to accidents in real-time. 
+                The system tends to enhance safety by minimizing response times, improving situational awareness, and increasing the chance of saving people's lives.
             </h6><br><br>
             <h4> Login Credentials: </h4>
             <h4 class="title"> Usernames </h4>
