--- a/pages/logo.html
+++ b/pages/logo.html
@@ -17,8 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="header-menu"></div>
+        <div class="page-header" data-title="logo"></div>
 
         <div class="logoDiv">
             <img src="../assets/logo/01_logo.png" alt="">
