--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <img src="/assets/home/project_1.png" data-page="logo">
         <img src="/assets/home/project_2.png" data-page="ams">
-        <img src="/assets/home/project_3.png">
+        <img src="/assets/home/project_3.png" data-page="food-galore">
         <img src="/assets/home/project_4.png">
         <img src="/assets/home/project_5.png">
         <img src="/assets/home/project_6.png">
