ams content and modification

--- a/pages/ams.html
+++ b/pages/ams.html
@@ -22,13 +22,15 @@
             <!-- <h2> Accident Monitoring System </h2><br> -->
             <h6> AMS is a system designed to detect, monitor, and respond to accidents in real-time. 
                 The system tends to enhance safety by minimizing response times, improving situational awareness, and increasing the chance of saving people's lives.
-            </h6><br><br>
-            <h4> Login Credentials: </h4>
-            <h4 class="title"> Usernames </h4>
+            </h6><br>
+            <h6>You can log in using the provided credentials as either a <span>user</span>, 
+                who wears a device and is monitored by a benefactor, or as a <span>benefactor</span>,
+                who monitors the user.</h6> <br>
+            <h6 class="title"> Usernames </h6>
             <h4 class="font-style"> guest_user <i class="fas fa-clone"></i></h4>
             <h4 class="font-style"> guest_benefactor <i class="fas fa-clone"></i></h4>
             <br>
-            <h4 class="title"> Password </h4>
+            <h6 class="title"> Password </h6>
             <h4 class="font-style"> Accidentm0nit0ring0621! <i class="fas fa-clone"></i></h4><br><br>
             <a class="ams-btn">Go to Website</a>
         </div>
