--- a/pages/food-galore.html
+++ b/pages/food-galore.html
@@ -18,14 +18,14 @@
     <div class="container">
         <div class="page-header" data-title="Food Galore"></div>
 
+        <div class="container-instruction">
+            <h4>Navigate <span class="food-galore">Food Galore</span> by clicking the four (4) images located at the center-left of the prototype.</h4>
+            <h6>**For the best experience, view in full screen at a 1920 resolution.</h6>
+        </div>
         <div class="container-image-link">
             <img class="container-image-link__mobile" src="../assets/food-galore/food-galore-mobile.png" alt="Food Galore">
             <img class="container-image-link__tablet" src="../assets/food-galore/food-galore-tablet.png" alt="Food Galore">
             <img class="container-image-link__desktop" src="../assets/food-galore/food-galore-desktop.png" alt="Food Galore">
-        </div>
-        <div class="container-instruction">
-            <h4>Navigate <span>Food Galore</span> by clicking the four (4) images located at the center-left of the prototype.</h4>
-            <h6>**For the best experience, view in full screen at a 1920 resolution.</h6>
         </div>
     </div>
     <div class="backdrop"></div>
@@ -33,12 +33,12 @@
     <script src="../script/global.js"></script>
     <script>
         $(document).ready(function(){
-            $('.container-image-link img').on('click', function(){
+            $('.container-image-link img, .food-galore').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
                 $('.backdrop').load('../../components/loader.html');
 
                 setTimeout(() => {
-                    window.open('https://www.figma.com/proto/0ooVPw7FXZwwQzlG6G1jdq/Random-No-Sense?node-id=7-3&node-type=canvas&t=Y7mXA4JHoHPQcfnE-0&scaling=min-zoom&content-scaling=fixed&page-id=7%3A2&starting-point-node-id=7%3A3', '_blank');
+                    window.open('https://www.figma.com/proto/w3LQYZgHPaon54Cbfo4lzo/Food-Galore?node-id=5-55&node-type=canvas&t=vlNhptDhYeOtHe4a-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A55', '_blank');
                     $('.backdrop').hide();
                 }, 1000);
             })
