coffee maker backdrop

--- a/pages/coffee-maker.html
+++ b/pages/coffee-maker.html
@@ -26,7 +26,8 @@
             <img class="container-image-link__tablet" src="../assets/coffee-maker/coffee-maker-tablet.png" alt="Coffee Maker">
             <img class="container-image-link__desktop" src="../assets/coffee-maker/coffee-maker-desktop.png" alt="Coffee Maker">
         </div>
-    </div> 
+    </div>
+    <div class="backdrop"></div>
 
     <script src="../script/global.js"></script>
     <script>
@@ -36,7 +37,7 @@
                 $('.backdrop').load('../../components/loader.html');
 
                 setTimeout(() => {
-                    window.open('https://www.figma.com/proto/w3LQYZgHPaon54Cbfo4lzo/Food-Galore?node-id=5-55&node-type=canvas&t=vlNhptDhYeOtHe4a-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A55', '_blank');
+                    window.open('https://www.figma.com/proto/xZFtZgg4ilKj3dOzowxXO9/Coffee-Maker?node-id=190-1118&node-type=canvas&t=mYlVy1Y7ZI5osHGT-0&scaling=min-zoom&content-scaling=fixed&page-id=138%3A39&starting-point-node-id=138%3A48', '_blank');
                     $('.backdrop').hide();
                 }, 1000);
             })
