--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="/assets/home/project_2.png" data-page="ams">
         <img src="/assets/home/project_3.png" data-page="food-galore">
         <img src="/assets/home/project_4.png" data-page="coffee-maker">
-        <img src="/assets/home/project_5.png">
+        <img src="/assets/home/project_5.png" data-page="cashcare">
         <img src="/assets/home/project_6.png">
     </div>
 
