--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="/assets/home/project_3.png" data-page="food-galore">
         <img src="/assets/home/project_4.png" data-page="coffee-maker">
         <img src="/assets/home/project_5.png" data-page="cashcare">
-        <img src="/assets/home/project_6.png">
+        <img src="/assets/home/project_6.png" data-page="omada">
     </div>
 
     <script src="/script/global.js"></script>
