--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
     <link rel="icon" href="/assets/logo.png">
-    <title> Document </title>
+    <title> Erica Gaffud | About </title>
     <link rel="stylesheet" href="/styles/global/global.css">
     <link rel="stylesheet" href="../styles/about/about.css">
 </head>
