about page content

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,8 +22,6 @@
 
         <div class="container-about">
             <div class="container-about--info">
-                <h2>Proficiency and Skills</h2>
-
                 <h2>Educational Background</h2>
                 <div>
                     <h4 class="info">Bachelor of Science in Computer Engineering</h4>
@@ -39,7 +37,12 @@
                     <h6> Salcedo Village, Makati City <br>
                         October 17, 2022 - Present</h6>
                     <div>
-                        <p>To be...</p>
+                        <p>API migration and integration.</p>
+                        <p>Mobile First Design.</p>
+                        <p>Unit testing in C# using NUnit.</p>
+                        <p>Mobile development using Ionic angular framework.</p>
+                        <p>Developed the design and prototype of various projects.</p>
+                        <p>Build applications.</p>
                     </div>
                 </div>
                 <div>
@@ -48,7 +51,9 @@
                     <h6> Carig Sur, Tuguegarao City, Cagayan <br>
                         2021 - 2022</h6>
                     <div>
-                        <p>To be.....</p>
+                        <p>Design and create prototype of the website.</p>
+                        <p>Developed the frontend of the Accident Monitoring System.</p>
+                        <p>Integrate with the hardware device of our system.</p>
                     </div>
                 </div>
                 <div>
@@ -100,6 +105,57 @@
                     <h4>Cagayan State University - Carig Campus</h4>
                     <h6>Carig Sur, Tuguegarao City, Cagayan <br>
                         2019 - 2022</h6>
+                </div>
+
+                <h2>Skills</h2>
+                <div>
+                    <div>
+                        <p>Persevere</p>
+                        <p>Computer literate</p>
+                        <p>Communication skills</p>
+                        <p>Good time and task manager</p>
+                        <p>Fast learner and adapt easily</p>
+                        <p>Wireframing and prototyping</p>
+                        <p>Coding skills <span>(mobile first design)</span></p>
+                        <p>UI designing skills</p>
+                        <p>UX writing</p>
+                        <p>Mobile and web design</p>
+                    </div>
+                </div>
+
+                <h2>Proficiency</h2>
+                <div>
+                    <h4 class="info">UI/UX Design Tools</h4>
+                    <div>
+                        <p>Figma</p>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="info">Programming Languages</h4>
+                    <div>
+                        <p>HTML</p>
+                        <P>CSS <span>(Bootstrap)</span></P>
+                        <p>JavaScript <span>(Angular, Vue, React)</span></p>
+                        <p>C# <span>(ASP .NET MVC)</span></p>
+                        <p>Php <span>(MySQL)</span></p>
+                        <p>Python</p>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="info">Software Development Tools</h4>
+                    <div>
+                        <p>Visual Studio</p>
+                        <p>Visual Studio Code</p>
+                        <p>Git</p>
+                        <p>GitHub</p>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="info">API Testing Tools</h4>
+                    <div>
+                        <p>Postman</p>
+                        <p>PostUI</p>
+                    </div>
                 </div>
             </div>
             <div class="container-about--profile">
