--- a/pages/logo.html
+++ b/pages/logo.html
@@ -20,20 +20,48 @@
         <div class="page-header" data-title="logo"></div>
 
         <div class="logoDiv">
-            <img src="../assets/logo/01_logo.png" alt="">
-            <img src="../assets/logo/02_logo.png" alt="">
-            <img src="../assets/logo/03_logo.png" alt="">
-            <img src="../assets/logo/04_logo.png" alt="">
-            <img src="../assets/logo/05_logo.png" alt="">
-            <img src="../assets/logo/06_logo.png" alt="">
-            <img src="../assets/logo/07_logo.png" alt="">
-            <img src="../assets/logo/08_logo.png" alt="">
-            <img src="../assets/logo/09_logo.png" alt="">
-            <img src="../assets/logo/10_logo.png" alt="">
+            <img src="../assets/logo/01_logo.png" alt="Long Covid, Post Covid logo">
+            <img src="../assets/logo/02_logo.png" alt="Reunir logo">
+            <img src="../assets/logo/03_logo.png" alt="Coffee Maker logo">
+            <img src="../assets/logo/04_logo.png" alt="Crafts and Digitals logo">
+            <img src="../assets/logo/05_logo.png" alt="Makan logo">
+            <img src="../assets/logo/06_logo.png" alt="Philenbau logo">
+            <img src="../assets/logo/07_logo.png" alt="Euphoria logo">
+            <img src="../assets/logo/08_logo.png" alt="Bookworms Paradise logo">
+            <img src="../assets/logo/09_logo.png" alt="UI logo">
+            <img src="../assets/logo/10_logo.png" alt="UX logo">
+            <img src="../assets/logo/11_logo.png" alt="Omada logo">
+            <img src="../assets/logo/12_logo.png" alt="Accident Monitoring System logo">
+            <img src="../assets/logo/13_logo.png" alt="Cashcare logo">
         </div>
 
         <script src="../script/global.js"></script>
         <script src="../script/logo.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('.logoDiv img').on('click', function() {
+                    var imgSrc = $(this).attr('src');
+                    var originalHeight = $(this).css('height');
+
+                    $('.logoDiv img').hide();
+                    $('.logoDiv').css('height', '70%');
+
+                    $(this).css({
+                        'display': 'flex',
+                        'height': '10rem'
+                    });
+
+                    var clickedImage = $(this);
+                    setTimeout(function () {
+                        $('.logoDiv img').show();
+                        $('.logoDiv').css('height', 'auto');
+
+                        clickedImage.css('height', originalHeight);
+                    }, 3000);
+
+                })
+            })
+        </script>
     </div>
 </body>
 </html>
