--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-    <link rel="icon" href="/assets/logo.png">
+    <link rel="icon" href="./assets/logo.png">
     <title> Document </title>
-    <link rel="stylesheet" href="/styles/global/global.css">
-    <link rel="stylesheet" href="/styles/home/home.css">
+    <link rel="stylesheet" href="./styles/global/global.css">
+    <link rel="stylesheet" href="./styles/home/home.css">
 </head>
 <body>
     <div class="container">
         <div class="header"></div>
         <div class="header-menu"></div>
 
-        <img src="/assets/home/project_1.png" data-page="logo">
-        <img src="/assets/home/project_2.png" data-page="ams">
-        <img src="/assets/home/project_3.png" data-page="food-galore">
-        <img src="/assets/home/project_4.png" data-page="coffee-maker">
-        <img src="/assets/home/project_5.png" data-page="cashcare">
-        <img src="/assets/home/project_6.png" data-page="omada">
+        <img src="./assets/home/project_1.png" data-page="logo">
+        <img src="./assets/home/project_2.png" data-page="ams">
+        <img src="./assets/home/project_3.png" data-page="food-galore">
+        <img src="./assets/home/project_4.png" data-page="coffee-maker">
+        <img src="./assets/home/project_5.png" data-page="cashcare">
+        <img src="./assets/home/project_6.png" data-page="omada">
     </div>
 
-    <script src="/script/global.js"></script>
-    <script src="/script/animation.js"></script>
+    <script src="./script/global.js"></script>
+    <script src="./script/animation.js"></script>
     <script>
         $('.container img').on('click', function(){
             var page = $(this).data('page');
