--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,9 @@
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-    <link rel="icon" href="/assets/logo.png">
+    <link rel="icon" href="../assets/logo.png">
     <title> Erica Gaffud | About </title>
-    <link rel="stylesheet" href="/styles/global/global.css">
+    <link rel="stylesheet" href="../styles/global/global.css">
     <link rel="stylesheet" href="../styles/about/about.css">
 </head>
 <body>
