--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
     <link rel="icon" href="./assets/logo.png">
-    <title> Document </title>
+    <title> Erica Gaffud | Portfolio </title>
     <link rel="stylesheet" href="./styles/global/global.css">
     <link rel="stylesheet" href="./styles/home/home.css">
 </head>
