header menu link

--- a/pages/work.html
+++ b/pages/work.html
@@ -12,7 +12,7 @@
     </script>
     <link rel="icon" href="/assets/logo.png">
     <title> Erica Gaffud | Work </title>
-    <link rel="stylesheet" href="/styles/global/global.css">
+    <link rel="stylesheet" href="../styles/global/global.css">
     <link rel="stylesheet" href="../styles/work/work.css">
 </head>
 <body>
@@ -21,12 +21,12 @@
         <div class="header-menu"></div>
 
         <div class="container-work">
-            <img src="/assets/home/project_1.png" data-page="logo">
-            <img src="/assets/home/project_2.png" data-page="ams">
-            <img src="/assets/home/project_3.png" data-page="food-galore">
-            <img src="/assets/home/project_4.png" data-page="coffee-maker">
-            <img src="/assets/home/project_5.png" data-page="cashcare">
-            <img src="/assets/home/project_6.png" data-page="omada">
+            <img src="../assets/home/project_1.png" data-page="logo">
+            <img src="../assets/home/project_2.png" data-page="ams">
+            <img src="../assets/home/project_3.png" data-page="food-galore">
+            <img src="../assets/home/project_4.png" data-page="coffee-maker">
+            <img src="../assets/home/project_5.png" data-page="cashcare">
+            <img src="../assets/home/project_6.png" data-page="omada">
         </div>
     </div>
 
