header page menu

--- a/pages/work.html
+++ b/pages/work.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="header-menu"></div>
+        <div class="header-page"></div>
+        <div class="header-page-menu"></div>
 
         <div class="container-work">
             <img src="../assets/home/project_1.png" data-page="logo">
