--- a/pages/about.html
+++ b/pages/about.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="header-menu"></div>
+        <div class="header-page"></div>
+        <div class="header-page-menu"></div>
 
         <div class="container-about">
             <div class="container-about--info">
