header name img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-    <link rel="icon" href="./assets/logo.png">
+    <link rel="icon" href="./assets/my-image.png">
     <title> Erica Gaffud | Portfolio </title>
     <link rel="stylesheet" href="./styles/global/global.css">
     <link rel="stylesheet" href="./styles/home/home.css">
