--- a/pages/food-galore.html
+++ b/pages/food-galore.html
@@ -10,6 +10,7 @@
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
+    <link rel="icon" href="./assets/my-image.png">
     <title>Erica Gaffud | Food Galore</title>
     <link rel="stylesheet" href="../styles/global/global.css">
     <link rel="stylesheet" href="../styles/food-galore/food-galore.css">
