--- a/pages/cashcare.html
+++ b/pages/cashcare.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
     <link rel="icon" href="./assets/my-image.png">
-    <title>Erica Gaffud | Cash Care </title>
+    <title>Erica Gaffud | Budget Tracker </title>
     <link rel="stylesheet" href="../styles/global/global.css">
     <link rel="stylesheet" href="../styles/cashcare/cashcare.css">
 </head>
