dynamic header iamge

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
+        <div class="header" data-image="./assets/logo_name.png"></div>
         <div class="header-menu"></div>
 
         <img src="./assets/home/project_1.png" data-page="logo">
