--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header-page"></div>
+        <div class="header-page" data-image="../assets/logo_name.png"></div>
         <div class="header-page-menu"></div>
 
         <div class="container-cv">
