about page profile image

--- a/pages/about.html
+++ b/pages/about.html
@@ -160,7 +160,7 @@
             </div>
             <div class="container-about--profile">
                 <h1> Engr. Erica Duran Gaffud </h1>
-                <img src="../assets/my-image.png" alt="Erica Gaffud">
+                <img src="../assets/profile.png" alt="Erica Gaffud">
             </div>
         </div>
     </div>
