loader component relink

--- a/pages/ams.html
+++ b/pages/ams.html
@@ -43,7 +43,7 @@
         $(document).ready(function(){
             $('.ams-btn').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
-                $('.backdrop').load('./components/loader.html');
+                $('.backdrop').load('../components/loader.html');
 
                 setTimeout(() => {
                     window.open('https://ericagaffud.github.io/Accident-Monitoring-System/', '_blank');
