--- a/pages/coffee-maker.html
+++ b/pages/coffee-maker.html
@@ -35,7 +35,7 @@
         $(document).ready(function(){
             $('.container-image-link img, .coffee-maker').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
-                $('.backdrop').load('../../components/loader.html');
+                $('.backdrop').load('../components/loader.html');
 
                 setTimeout(() => {
                     window.open('https://www.figma.com/proto/xZFtZgg4ilKj3dOzowxXO9/Coffee-Maker?node-id=190-1118&node-type=canvas&t=mYlVy1Y7ZI5osHGT-0&scaling=min-zoom&content-scaling=fixed&page-id=138%3A39&starting-point-node-id=138%3A48', '_blank');
