--- a/pages/cashcare.html
+++ b/pages/cashcare.html
@@ -36,7 +36,7 @@
         $(document).ready(function(){
             $('.container-image-link img, .cashcare').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
-                $('.backdrop').load('../../components/loader.html');
+                $('.backdrop').load('../components/loader.html');
 
                 setTimeout(() => {
                     window.open('https://www.figma.com/proto/MCqpAC5wzsqNDOS4LTctH1/Budget-Tracker?node-id=9-127&node-type=frame&t=uFVtb2DueBgLKhAl-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=3%3A41', '_blank');
