--- a/pages/food-galore.html
+++ b/pages/food-galore.html
@@ -36,7 +36,7 @@
         $(document).ready(function(){
             $('.container-image-link img, .food-galore').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
-                $('.backdrop').load('../../components/loader.html');
+                $('.backdrop').load('../components/loader.html');
 
                 setTimeout(() => {
                     window.open('https://www.figma.com/proto/w3LQYZgHPaon54Cbfo4lzo/Food-Galore?node-id=5-55&node-type=canvas&t=vlNhptDhYeOtHe4a-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A55', '_blank');
