--- a/pages/omada.html
+++ b/pages/omada.html
@@ -35,7 +35,7 @@
         $(document).ready(function(){
             $('.container-image-link img, .omada').on('click', function(){
                 $('.backdrop').css({'display': 'flex'})
-                $('.backdrop').load('../../components/loader.html');
+                $('.backdrop').load('../components/loader.html');
 
                 setTimeout(() => {
                     window.open('https://www.figma.com/proto/43FTbP4YzZF9wER2Kpy7NR/Omada?node-id=1-204&node-type=frame&t=QiVpQXcqgUIHB4lw-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2', '_blank');
