--- a/index.html
+++ b/index.html
@@ -18,15 +18,51 @@
 </head>
 <body>
     <div class="container">
-        <div class="header" data-image="./assets/logo_name.png"></div>
-        <div class="header-menu"></div>
-
-        <img src="./assets/home/project_1.png" data-page="logo">
-        <img src="./assets/home/project_2.png" data-page="ams">
-        <img src="./assets/home/project_3.png" data-page="food-galore">
-        <img src="./assets/home/project_4.png" data-page="coffee-maker">
-        <img src="./assets/home/project_5.png" data-page="cashcare">
-        <img src="./assets/home/project_6.png" data-page="omada">
+        <div class="header">
+            <h2>Erica</h2>
+            <div>
+                <button class="primary_btn_outline"> Let's Chat </button>
+                <div>
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>
+        </div>
+        <div class="body">
+            <div class="body-intro">
+                <h1>Hi! I am <br> Erica Gaffud</h1>
+                <h3>Creating responsive and 
+                    user-friendly web interfaces for over <span>2 years</span> as a
+                    Software Developer
+                </h3>
+                <div class="body-intro-buttons">
+                    <button class="primary_btn"> Hire Me </button>
+                    <button class="primary_link"> 
+                        Project
+                        <img src="./assets/icons/expand-icon.png" alt="">
+                    </button>
+                </div>
+            </div>
+            <div class="body-image">
+                <img src="./assets/profile-picture.png" alt="Erica Gaffud profile picture">
+            </div>
+            <div class="body-footer">
+                <div class="body-footer-quicklinks">
+                    <button class="primary_link">
+                        <img src="./assets/icons/about-icon.png" alt="Know More About Me icon">
+                        Know More About Me
+                    </button>
+                    <button class="primary_link">
+                        <img src="./assets/icons/contact-icon.png" alt="Contact icon">
+                        Contact
+                    </button>
+                </div>
+                <div class="body-footer-info">
+                    <h4>Website Design <span>21</span></h4>
+                    <h4>Mobile App Design <span>18</span></h4>
+                    <h4>Prototype <span>43</span></h4>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./script/global.js"></script>
