--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/global/global.css">
     <link rel="stylesheet" href="./styles/home/home.css">
     <link rel="stylesheet" href="./styles/about/about.css">
+    <link rel="stylesheet" href="./styles/work/work.css">
 </head>
 <body>
     <div class="container">
@@ -23,8 +24,8 @@
             <h2>Erica</h2>
             <ul class="header-nav">
                 <span class="header-nav-close">&#128473;</span>
+                <li class="header-nav-item">Home</li>
                 <li class="header-nav-item">About</li>
-                <li class="header-nav-item">Contact</li>
                 <li class="header-nav-item">Work</li>
             </ul>
             <span class="header-overlay"></span>
@@ -187,8 +188,61 @@
             </div>
         </div>
 
-        <div class="body-work">
-
+        <div id="bodyWork" class="body-work">
+            <div class="body-work__hero">
+                <div class="body-work__hero__tag">
+                    <h1>Creating <span>BRANDS</span> that connect & inspire</h1>
+                    <button class="tertiary_btn"> 
+                        Logo
+                        <img src="./assets/icons/expand-icon-colored.png" alt="">
+                    </button>
+                </div>
+                <img src="./assets/work/work-hero.png" alt="">
+            </div>
+            <div class="body-work__system">
+                <div class="body-work__system--img">
+                    <img src="./assets/work/web-system.png" alt="">
+                </div>
+                <div class="body-work__system--info">
+                    <h3>AMS is a system designed to detect, monitor, and respond to accidents in real-time. 
+                        The system tends to enhance safety by minimizing response times, improving situational 
+                        awareness, and increasing the chance of saving people's lives.
+                    </h3>
+                    <h4>You can log in using the provided credentials as either a 
+                        user, who wears a device and is monitored by a benefactor, or as a benefactor, who monitors the user.
+                    </h4>
+                    <h4 class="bold">Username:</h4>
+                    <h4 class="font-style">guest_user<i class="fas fa-clone"></i></h4>
+                    <h4 class="font-style">guest_benefactor<i class="fas fa-clone"></i></h4>
+                    <h4 class="bold">Password:</h4>
+                    <h4 class="font-style">Accidentm0nit0ring0621!<i class="fas fa-clone"></i></h4>
+                    <button class="primary_btn">Go to Website</button>
+                    <button class="primary_btn_outline">Go to Prototype</button>
+                </div>
+            </div>
+            <div class="body-work__system info-second">
+                <div class="body-work__system--img">
+                    <img src="./assets/work/mobile-system.png" alt="">
+                </div>
+                <div class="body-work__system--info">
+                    <h3>Cash Care is a budget tracker designed to help you take charge of your finances
+                        with ease and confidence. It empowers you to monitor spending, set savings goals, 
+                        and achieve financial well-being by giving every peso a purpose.
+                    </h3>
+                    <h4>Navigate through the prototype by clicking buttons from 'Get Started', 
+                        menu tabs and tabs in Assets page.
+                    </h4>
+                    <button class="primary_btn">Go to Prototype</button>
+                </div>
+            </div>
+            <div class="body-work__prototype">
+                <h1>Prototype</h1>
+                <div class="body-work__prototype--images">
+                    <img src="./assets/work/card-prototype.png" alt="">
+                    <img src="./assets/work/food-galore-prototype.png" alt="">
+                    <img src="./assets/work/coffee-maker-prototype.png" alt="">
+                </div>
+            </div>
         </div>
 
         <div class="body-contact">
@@ -199,7 +253,8 @@
     <script src="./script/global.js"></script>
     <script src="./script/animation.js"></script>
     <script>
-        $('#bodyHome').hide();
+        // $('#bodyHome').hide();
+        // $('#bodyAbout').hide();
         $('#headerMenu').on('click', function(){
             $('.header-nav').addClass('active-nav');
             $('.header-overlay').css('display', 'block');
