pages set as component

--- a/index.html
+++ b/index.html
@@ -20,250 +20,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h2>Erica</h2>
-            <ul class="header-nav">
-                <span class="header-nav-close">&#128473;</span>
-                <li class="header-nav-item">Home</li>
-                <li class="header-nav-item">About</li>
-                <li class="header-nav-item">Work</li>
-            </ul>
-            <span class="header-overlay"></span>
-            <div>
-                <button class="primary_btn_outline"> Let's Chat </button>
-                <div id="headerMenu" class="header-menu">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-            </div>
-        </div>
-        <div id="bodyHome" class="body">
-            <div class="body-intro">
-                <h1>Hi! I am <br> Erica Gaffud</h1>
-                <h3>Creating responsive and 
-                    user-friendly web interfaces for over <span>2 years</span> as a
-                    Software Developer
-                </h3>
-                <div class="body-intro-buttons">
-                    <button class="primary_btn"> Hire Me </button>
-                    <button class="primary_link"> 
-                        Project
-                        <img src="./assets/icons/expand-icon.png" alt="">
-                    </button>
-                </div>
-            </div>
-            <div class="body-image">
-                <img src="./assets/profile-picture.png" alt="Erica Gaffud profile picture">
-            </div>
-            <div class="body-footer">
-                <div class="body-footer-quicklinks">
-                    <button class="primary_link">
-                        <img src="./assets/icons/about-icon.png" alt="Know More About Me icon">
-                        Know More About Me
-                    </button>
-                    <button class="primary_link">
-                        <img src="./assets/icons/contact-icon.png" alt="Contact icon">
-                        Contact
-                    </button>
-                </div>
-                <div class="body-footer-info">
-                    <h4>Website Design <span>21</span></h4>
-                    <h4>Mobile App Design <span>18</span></h4>
-                    <h4>Prototype <span>43</span></h4>
-                </div>
-            </div>
-        </div>
-        <div id="bodyAbout" class="body-about">
-            <div class="body-about__hero">
-                <img src="./assets/about-me.png" alt="About Me Picture">
-                <div>
-                    <h1>Hi there!</h1>
-                    <h3>Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis. </h3>
-                </div>
-            </div>
-            <div class="body-about__mycareer">
-                <div class="body-about__mycareer__info">
-                    <h1>My Career So Far</h1>
-                    <h3>Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</h3>
-                </div>
-                <div class="body-about__mycareer__content">
-                    <span> UI Design </span>
-                    <span> UX Design </span>
-                    <span> Prototyping </span>
-                    <span> HTML/CSS </span>
-                    <span> API Integration </span>
-                    <span> Unit Testing </span>
-                    <span> User Research </span>
-                    <span> Mobile Development </span>
-                    <span> Web Development </span>
-                    <span> Responsive Web Design </span>
-                    <span> Mobile First Design </span>
-                </div>
-            </div>
-            <div class="body-about__quote">
-                <h1>A designer passionate about creating beautiful user friendly products.</h1>
-            </div>
-            <div class="body-about__experiences">
-                <h1>Experiences</h1>
-                <div class="body-about__experiences--container">
-                    <div class="body-about__experiences--container-date">
-                        <h4>2022 <br> present</h4>
-                    </div>
-                    <div class="body-about__experiences--container-content">
-                        <h3>Junior Software Developer</h3>
-                        <h4>API migration and integration.</h4>
-                        <h4>Mobile First Design.</h4>
-                        <h4>Unit testing in C# using NUnit.</h4>
-                        <h4>Mobile development using Ionic angular framework.</h4>
-                        <h4>Developed the design and prototype of various projects.</h4>
-                        <h4>Build applications.</h4>
-                        <h4>Agile project management.</h4>
-                    </div>
-                </div>
-                <div class="body-about__experiences--container">
-                    <div class="body-about__experiences--container-date">
-                        <h4>2021</h4>
-                    </div>
-                    <div class="body-about__experiences--container-content">
-                        <h3>Web Developer Intern</h3>
-                        <h4>Developed a To Do App using HTML and CSS.</h4>
-                        <h4>Developed a Registration Form and Helpdesk Ticketing System with Vuejs.</h4>
-                        <h4>Communicate regularly with my supervisors and discuss concerns on the tasks they had given.</h4>
-                        <h4>Accomplished the tasks given within a time frame.</h4>
-                    </div>
-                </div>
-                <div class="body-about__experiences--container">
-                    <div class="body-about__experiences--container-date">
-                        <h4>2012 <br> 2016</h4>
-                    </div>
-                    <div class="body-about__experiences--container-content">
-                        <h3>Technical Vocational Course</h3>
-                        <h4>Web Development using Adobe Dreamweaver.</h4>
-                        <h4>Assemble and disassemble computer processing unit (CPU).</h4>
-                        <h4>Configuring printer network.</h4>
-                        <h4>Network cabling and patch panel.</h4>
-                        <h4>Windows upgrade.</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="body-about__education">
-                <div class="body-about__education__info">
-                    <h1>Bachelor of Science in Computer Engineering</h1>
-                    <h2>Cagayan State University - Carig Campus <br>
-                        Tuguegarao City, Cagayan <br>
-                        2018 - 2022</h2>
-                </div>
-                <img src="./assets/graduates.png" alt="Graduation Picture">
-                <div class="body-about__education__quote">
-                    <h3>Education is the key that unlocks the doors to endless possibilities.</h3>
-                </div>
-            </div>
-            <div class="body-about__proficiency">
-                <h1>Proficiency</h1>
-                <div>
-                    <img src="./assets/proficiency/HTML.png" alt="HTML">
-                    <img src="./assets/proficiency/CSS.png" alt="CSS">
-                    <img src="./assets/proficiency/JAVASCRIPT.png" alt="JavaScript">
-                    <img src="./assets/proficiency/MySQL.png" alt="MySQL">
-                    <img src="./assets/proficiency/PYTHON.png" alt="Python">
-                    <img src="./assets/proficiency/CSHARP.png" alt="C#">
-                </div>
-                <div>
-                    <img src="./assets/proficiency/BOOTSTRAP.png" alt="Bootstrap">
-                    <img src="./assets/proficiency/SASS.png" alt="SASS">
-                    <img src="./assets/proficiency/REACT.png" alt="React">
-                    <img src="./assets/proficiency/ANGULAR.png" alt="Angular">
-                    <img src="./assets/proficiency/VUE.png" alt="Vue">
-                </div>
-                <div>
-                    <img src="./assets/proficiency/GIT.png" alt="Git">
-                    <img src="./assets/proficiency/GITHUB.png" alt="GitHub">
-                    <img src="./assets//proficiency/VISUAL STUDIO.png" alt="Visual Studio">
-                    <img src="./assets/proficiency/VISUAL STUDIO CODE.png" alt="Visual Studio Code">
-                    <img src="./assets//proficiency/ANDROID STUDIO.png" alt="Android Studio">
-                </div>
-                <div>
-                    <img src="./assets/proficiency/FIGMA.png" alt="Figma">
-                    <img src="./assets/proficiency/POSTMAN.png" alt="Postman">
-                </div>
-            </div>
-        </div>
-
-        <div id="bodyWork" class="body-work">
-            <div class="body-work__hero">
-                <div class="body-work__hero__tag">
-                    <h1>Creating <span>BRANDS</span> that connect & inspire</h1>
-                    <button class="tertiary_btn"> 
-                        Logo
-                        <img src="./assets/icons/expand-icon-colored.png" alt="">
-                    </button>
-                </div>
-                <img src="./assets/work/work-hero.png" alt="">
-            </div>
-            <div class="body-work__system">
-                <div class="body-work__system--img">
-                    <img src="./assets/work/web-system.png" alt="">
-                </div>
-                <div class="body-work__system--info">
-                    <h3>AMS is a system designed to detect, monitor, and respond to accidents in real-time. 
-                        The system tends to enhance safety by minimizing response times, improving situational 
-                        awareness, and increasing the chance of saving people's lives.
-                    </h3>
-                    <h4>You can log in using the provided credentials as either a 
-                        user, who wears a device and is monitored by a benefactor, or as a benefactor, who monitors the user.
-                    </h4>
-                    <h4 class="bold">Username:</h4>
-                    <h4 class="font-style">guest_user<i class="fas fa-clone"></i></h4>
-                    <h4 class="font-style">guest_benefactor<i class="fas fa-clone"></i></h4>
-                    <h4 class="bold">Password:</h4>
-                    <h4 class="font-style">Accidentm0nit0ring0621!<i class="fas fa-clone"></i></h4>
-                    <button class="primary_btn">Go to Website</button>
-                    <button class="primary_btn_outline">Go to Prototype</button>
-                </div>
-            </div>
-            <div class="body-work__system info-second">
-                <div class="body-work__system--img">
-                    <img src="./assets/work/mobile-system.png" alt="">
-                </div>
-                <div class="body-work__system--info">
-                    <h3>Cash Care is a budget tracker designed to help you take charge of your finances
-                        with ease and confidence. It empowers you to monitor spending, set savings goals, 
-                        and achieve financial well-being by giving every peso a purpose.
-                    </h3>
-                    <h4>Navigate through the prototype by clicking buttons from 'Get Started', 
-                        menu tabs and tabs in Assets page.
-                    </h4>
-                    <button class="primary_btn">Go to Prototype</button>
-                </div>
-            </div>
-            <div class="body-work__prototype">
-                <h1>Prototype</h1>
-                <div class="body-work__prototype--images">
-                    <img src="./assets/work/card-prototype.png" alt="">
-                    <img src="./assets/work/food-galore-prototype.png" alt="">
-                    <img src="./assets/work/coffee-maker-prototype.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="body-contact">
-
-        </div>
+        <div class="header"></div>
+        <div id="bodyHome" class="body"></div>
+        <div id="bodyAbout" class="body-about"></div>
+        <div id="bodyWork" class="body-work"></div>
     </div>
 
     <script src="./script/global.js"></script>
     <script src="./script/animation.js"></script>
     <script>
-        // $('#bodyHome').hide();
-        // $('#bodyAbout').hide();
-        $('#headerMenu').on('click', function(){
-            $('.header-nav').addClass('active-nav');
-            $('.header-overlay').css('display', 'block');
-        });
-
-        $('.header-nav-close').on('click', function(){
-            $('.header-nav').removeClass('active-nav');
-            $('.header-overlay').css('display', 'none');
-        })
+        $('#bodyHome').hide();
+        $('#bodyAbout').hide();
+        $('#bodyWork').hide();
     </script>
 </body>
 </html>
