--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="./assets/my-image.png">
     <title> Erica Gaffud | Portfolio </title>
     <link rel="stylesheet" href="./styles/global/global.css">
+    <link rel="stylesheet" href="./styles/header/header.css">
     <link rel="stylesheet" href="./styles/home/home.css">
     <link rel="stylesheet" href="./styles/about/about.css">
     <link rel="stylesheet" href="./styles/work/work.css">
@@ -28,10 +29,5 @@
 
     <script src="./script/global.js"></script>
     <script src="./script/animation.js"></script>
-    <script>
-        $('#bodyHome').hide();
-        $('#bodyAbout').hide();
-        $('#bodyWork').hide();
-    </script>
 </body>
 </html>
