--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div id="bodyWork" class="body-work"></div>
     </div>
 
+    <script src="./script/storage.js"></script>
     <script src="./script/global.js"></script>
     <script src="./script/animation.js"></script>
 </body>
